# s1995

./: .gitignore  CMakeLists.txt  README.md
Source/: ADCChain.cpp  ADCChain.hpp  AudioMeter.cpp  AudioMeter.hpp  AudioMeterProcessor.cpp  AudioMeterProcessor.hpp  CustomSlider.cpp  CustomSlider.hpp  DACChain.hpp  DacChain.cpp  LoFilter.hpp  Lofilter.cpp  PreADCChain.cpp  PreADCChain.hpp  s1995PluginAudioProcessor.cpp  s1995PluginAudioProcessor.hpp  s1995PluginAudioProcessorEditor.cpp  s1995PluginAudioProcessorEditor.hpp
